tests/hole_const_typed_bad.stderr
tests/hole_const_typed_bad.hop:3:11: error: HOP2007: identifier '_' is reserved
