tests/hole_const_typed_bad.hop
// Verifies hole const typed is rejected.
fn example() {
    const _ int = 1
}
